# tauri-spotify-clone

./: README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Page.tsx  Player.tsx  SideBar.tsx  TopBar.tsx  tailwind-indicator.tsx
src/components/Pages/: Home.tsx  Liked.tsx  Playlist.tsx  Search.tsx
src/data/: cards.json  playlists.ts  search_cards.json
